--- a/python_tutoring.html
+++ b/python_tutoring.html
@@ -31,73 +31,16 @@
             color: white;
             display: flex;
             flex-direction: column;
-            align-items: center; /* Center content horizontally */
-            justify-content: flex-start; /* Keep content at the top */
+            align-items: flex-start;
             height: 100vh;
             padding-left: 5vw; /* Padding relative to viewport width */
-            padding-top: 5vh; /* Add some space from the top of the viewport */
-            background-attachment: fixed; /* Keep the background fixed during scrolling */
         }
-
 
         h1 {
-            font-size: clamp(2.5rem, 5vw, 6rem);
-            margin-top: 8vh; /* Added margin-top to create space between title and nav bar */
-            margin-bottom: 2vh;
+            font-size: clamp(2.5rem, 5vw, 6rem); /* Increased min size to 2.5rem, max size to 6rem */
+            margin-top: 10vh; /* Default margin-top for mobile */
             line-height: 1.2;
             color: white;
-            text-align: center;
-        }
-
-        .description-text {
-            font-size: clamp(1.2rem, 1.5vw, 2rem); /* Smaller minimum size */
-            margin: 2vh 2vw; /* Vertical and horizontal margins set to 2vh and 2vw */
-            color: #aaa; /* Same color as email text */
-            text-align: left; /* Left aligned */
-            max-width: 50em; /* Increased max width to 50em */
-            line-height: 1.4; /* Optional: controls line height for better readability */
-        }
-
-        .description-text ul {
-            padding-left: 1rem; /* Optional: Add some padding on the left for bullets */
-        }
-
-        .description-text li {
-            line-height: 0.5; /* Reduces space between list items */
-            padding: 0.0vh 0; /* Adjust padding for less space */
-        }
-
-        /* Horizontal text box container */
-        .text-box-container {
-            display: flex;
-            justify-content: space-between; /* Spaces the text boxes apart */
-            width: 90%; /* Make sure the boxes are responsive */
-            margin-top: 5vh;
-        }
-
-        /* Remove the visual styles for the text boxes */
-        .text-box {
-            width: 45%; /* Keep the width of the text box as is */
-            height: auto; /* Let the height adjust based on content */
-            color: white; /* Keep text color */
-            font-size: 1.2rem;
-            text-align: left; /* Align text to the left */
-            margin-bottom: 2vh; /* Add some spacing between text boxes */
-            line-height: 1.4; /* Optional: controls line height for better readability */
-            background: none; /* Remove background */
-            border: none; /* Remove border */
-            padding: 0; /* Remove padding */
-        }
-
-        .text-box.description-text {
-            padding: 1rem; /* Add some padding if needed for the text inside the left box */
-            background-color: transparent; /* Ensure the background stays transparent */
-        }
-
-
-        .text-box:focus {
-            outline: none;
-            border-color: #888; /* Focus state for the text box */
         }
 
         /* Menu bar styles */
@@ -160,7 +103,7 @@
         }
 
         .menu.mobile.show {
-            display: flex; /* Show it instantly */
+            display: flex; /* Show the menu */
         }
 
         .menu.mobile a {
@@ -175,45 +118,105 @@
             text-decoration: underline; /* Highlight on hover */
         }
 
-        /* Media Queries */
+        /* Content boxes */
+        .content-boxes {
+            display: flex;
+            justify-content: space-between;
+            width: 90%; /* Full width minus some padding */
+            margin-top: 5vh; /* Some space between title and boxes */
+        }
+
+        .content-box {
+            background-color: rgba(18, 18, 18, 0.9); /* Original darker shade */
+            color: #aaa;  /* Light grey color similar to description text */
+            width: 48%; /* Each box takes up about half of the width */
+            padding: 2vh 3vw;
+            text-align: left; /* Align text to the left for readability */
+            border-radius: 10px; /* Optional: rounded corners */
+            line-height: 1.4; /* Similar line height as description text */
+            font-size: clamp(1.2rem, 1.5vw, 2rem); /* Font size relative to viewport width */
+        }
+
+        /* Mobile specific styles */
         @media (max-width: 768px) {
-            /* Mobile menu links hidden */
-            .menu-bar a {
-                display: none;
+            /* Ensure the content is aligned at the top of the page */
+            body {
+                justify-content: flex-start;
+                padding-left: 5vw;
+                padding-top: 5vh; /* Adjust margin on mobile to be the same as originally */
             }
 
-            /* Hamburger menu visible for mobile */
+            /* Set title margin-top to 10vh for mobile */
+            h1 {
+                margin-top: 10vh; /* Match original title margin on mobile */
+            }
+
+            /* Make sure the hamburger menu is visible and right-aligned */
             .hamburger {
                 display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                width: 36px; /* Set the width of the hamburger */
+                height: 30px; /* Set the height of the hamburger */
+                cursor: pointer;
+                margin-left: auto; /* Right-align the hamburger */
             }
 
-            /* Mobile menu displayed when "show" class is added */
-            .menu.mobile.show {
-                display: flex; /* Show it instantly */
-            }
-
-            /* When the hamburger menu is visible, align text to the top with some space from the top bar */
-            body {
-                justify-content: flex-start; /* Align text to the top */
-                padding-left: 5vw; /* Keep left padding for consistency */
-                padding-top: 10vh; /* Add space between the top bar and content */
-            }
-
-            /* Ensure the text boxes are stacked on top of each other on smaller screens */
-            .text-box-container {
+            /* Stack content boxes vertically on mobile */
+            .content-boxes {
                 flex-direction: column;
                 width: 90%;
             }
 
-            .text-box {
-                width: 100%; /* Make the text boxes full width on smaller screens */
-                margin-bottom: 2vh; /* Add space between text boxes */
+            .content-box {
+                width: 100%; /* Boxes should take full width on mobile */
+                margin-bottom: 3vh; /* Space between boxes */
+            }
+
+            /* Hide navigation links on mobile */
+            .menu-bar a {
+                display: none; /* Hide links on mobile */
+            }
+
+            /* Mobile menu should be hidden initially and shown when toggled */
+            .menu.mobile {
+                display: none; /* Hide the mobile menu initially */
+                position: absolute;
+                top: 60px; /* Position below the header */
+                left: 0;
+                right: 0;
+                background-color: #333;
+                flex-direction: column;
+                padding: 3vh 4vw;
+                z-index: 9;
+            }
+
+            .menu.mobile.show {
+                display: flex; /* Show the menu when toggled */
+            }
+
+            .menu.mobile a {
+                padding: 2vh 4vw;
+                border-bottom: 1px solid #444;
+                color: #aaa;  /* Links in the dropdown menu match navigation links color */
+                text-decoration: none;
+                font-size: clamp(1.2rem, 1.5vw, 2rem); /* Font size relative to viewport */
+            }
+
+            .menu.mobile a:hover {
+                text-decoration: underline; /* Highlight on hover */
             }
         }
 
+        /* Desktop styles (unchanged) */
         @media (min-width: 769px) {
-            .hamburger {
-                display: none;
+            h1 {
+                margin-top: 15vh; /* Increased space from the top for desktop */
+            }
+
+            /* Increase the distance between title and text boxes */
+            .content-boxes {
+                margin-top: 10vh; /* Increased space for desktop */
             }
         }
 
@@ -245,39 +248,15 @@
     <!-- Main Content -->
     <h1>Python Tutoring</h1>
 
-    <!-- Text boxes below the title -->
-    <div class="text-box-container">
-        <!-- Left text box with description -->
-        <div class="text-box">
-            <p class="description-text">In this level of tutoring I will work from your existing level of knowledge. You could be a complete beginner or have some understanding of programming concepts. I will teach you new concepts and programming techniques by first explaining the theory, showing how it works with code, and then giving you challenges which we can work through together should you need any help.</p>
-            <p class="description-text">£7.50 (1st hour), £15 per hour afterwards</p> 
-            <p class="description-text">Enquiries - Harrison070806@gmail.com</p>
+    <!-- Content Boxes -->
+    <div class="content-boxes">
+        <div class="content-box">
+            This is a test
         </div>
-    
-        <!-- Right text box with programming concepts -->
-        <div class="text-box">
-            <p class="description-text">Programming concepts taught include:</p>
-            <ul class="description-text">
-                <li class="description-text">Types</li>
-                <li class="description-text">Variables</li>
-                <li class="description-text">Printing outputs</li>
-                <li class="description-text">Input handling</li>
-                <li class="description-text">String handling</li>
-                <li class="description-text">List comprehension</li>
-                <li class="description-text">Boolean logic</li>
-                <li class="description-text">Selection</li>
-                <li class="description-text">Loops</li>
-                <li class="description-text">Subroutines</li>
-                <li class="description-text">File handling</li>
-                <li class="description-text">Additional modules</li>
-                <li class="description-text">Data structures</li>
-                <li class="description-text">Classes & OOP</li>
-                <li class="description-text">Error handling</li>
-                <li class="description-text">Problem solving</li>
-            </ul>
+        <div class="content-box">
+            This is a test
         </div>
     </div>
-    
 
     <script>
         // Toggle mobile menu on hamburger click
