changed margin of paragraph in python tutoring page

--- a/python_tutoring.html
+++ b/python_tutoring.html
@@ -46,7 +46,10 @@
 
         p { 
             margin-top: 4vh; 
-            margin-bottom: 4vh
+            margin-bottom: 4vh;
+            margin-left: 1vw; 
+            margin-right: 1vw;
+
         }
 
         /* Menu bar styles */
