--- a/python_tutoring.html
+++ b/python_tutoring.html
@@ -47,8 +47,8 @@
         p { 
             margin-top: 4vh; 
             margin-bottom: 4vh;
-            margin-left: 1vw; 
-            margin-right: 1vw;
+            margin-left: 2vh; 
+            margin-right: 2vh;
 
         }
 
