improved text on both index and python tutoring page

--- a/index.html
+++ b/index.html
@@ -160,6 +160,11 @@
             border: 0.25vw solid #aaa; /* Border around the image, smaller (0.25% of the image size) */
         }
 
+        .bold_text { 
+            font-weight: bold; 
+            color: white; 
+        }
+        
         /* Mobile specific styles */
         @media (max-width: 768px) {
             /* Ensure the content is aligned at the top of the page */
@@ -280,6 +285,7 @@
                 <a href="python_tutoring.html">Python Tutoring</a>
                 <a href="#">Pygame Tutoring</a>
                 <a href="#">About Me</a>
+                <a href="https://github.com/HarrisonBaghurst">My Github</a>
             </div>
         </div>
 
@@ -288,6 +294,7 @@
             <a href="python_tutoring.html">Python Tutoring</a>
             <a href="#">Pygame Tutoring</a>
             <a href="#">About Me</a>
+            <a href="https://github.com/HarrisonBaghurst">My Github</a>
         </div>
 
         <!-- Main Content -->
@@ -296,7 +303,7 @@
         <p class="description-text">I offer personalized Python programming tutoring for all skill levels, from beginners to advanced learners. 
             Whether you're just starting out or looking to deepen your understanding of complex programming concepts, 
             I will guide you through the learning process with tailored lessons that meet your individual needs.</p>
-        <p class="email">Enquiries - Harrison070806@gmail.com</p>
+        <p class="description-text"><span class="bold_text">Enquiries - Harrison070806@gmail.com</span></p>
 
         <!-- Image container -->
         <div class="image-container">
