--- a/python_tutoring.html
+++ b/python_tutoring.html
@@ -148,6 +148,11 @@
             font-size: clamp(1.2rem, 1.5vw, 2rem); /* Font size relative to viewport width */
         }
 
+        .bold_text { 
+            font-weight: bold; 
+            color: white; 
+        }
+
         /* Mobile specific styles */
         @media (max-width: 768px) {
             /* Ensure the content is aligned at the top of the page */
@@ -245,6 +250,7 @@
             <a href="index.html">Home</a>
             <a href="#">Pygame Tutoring</a>
             <a href="#">About Me</a>
+            <a href="https://github.com/HarrisonBaghurst">My Github</a>
         </div>
     </div>
 
@@ -253,6 +259,7 @@
         <a href="index.html">Home</a>
         <a href="#">Pygame Tutoring</a>
         <a href="#">About Me</a>
+        <a href="https://github.com/HarrisonBaghurst">My Github</a>
     </div>
 
     <!-- Main Content -->
@@ -261,12 +268,18 @@
     <!-- Content Boxes -->
     <div class="content-boxes">
         <div class="content-box">
-            <p>In this level of tutoring, I will tailor the lessons to your current level of knowledge, whether you're a beginner or have some experience with programming. I will introduce new concepts and techniques, starting with a theoretical explanation, followed by practical code examples, and provide you with challenges to work through. I will offer guidance and support as needed to ensure your understanding.</p>
+            <p><span class="bold_text">Who can learn Python?</span></p>
+            <p>In short, anybody can learn Python. In this level of tutoring, I will tailor the lessons to your current level of knowledge, whether you're a beginner or have some experience with programming. I will introduce new concepts and techniques, starting with a theoretical explanation, followed by practical code examples, and provide you with challenges to work through. I will offer guidance and support as needed to ensure your understanding.</p>
             <p>Lessons will be conducted via online video call, requiring a stable internet connection, a microphone, and a device (PC or laptop) for programming. A camera is not necessary.</p>
-            <p>£7.50 for the initial hour, followed by £15 per hour afterwards.</p>
+            <p><span class="bold_text">£7.50</span> for the initial hour, followed by <span class="bold_text">£15</span> per hour afterwards.</p>
+            <p><span class="bold_text">Enquiries - Harrison070806@gmail.com</span></p>
+
         </div>
         <div class="content-box">
-            This is a test
+            <p><span class="bold_text">What will be taught?</span></p>
+            <p>The following programming concepts will be covered at this level of tutoring: Data types, variables, output formatting, input handling, string manipulation, list comprehensions, conditional statements, loops, functions, file handling, additional libraries, data structures, object-oriented programming (OOP), error handling, and problem-solving techniques.</p>
+            <p>A variety of programming challenges will be introduced, including topics such as Sum of digits, Palindrome checking, Fibonacci sequence, Bubble sort, and more.</p>
+            <p>While not a required next step, this level of tutoring naturally progresses into my game development sessions using Python and Pygame.</p>
         </div>
     </div>
 
