--- a/python_tutoring.html
+++ b/python_tutoring.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Python Tutoring</title>
+    <title>Your Programming Tutor</title>
     <style>
         /* Load the VarelaRound font */
         @font-face {
@@ -248,8 +248,8 @@
         </div>
         <div class="menu">
             <a href="index.html">Home</a>
-            <a href="#">Pygame Tutoring</a>
-            <a href="#">About Me</a>
+            <a href="pygame_tutoring.html">Pygame Tutoring</a>
+            <a href="about_me.html">About Me</a>
             <a href="https://github.com/HarrisonBaghurst">My Github</a>
         </div>
     </div>
@@ -257,8 +257,8 @@
     <!-- Mobile Menu (hidden by default) -->
     <div class="menu mobile" id="mobile-menu">
         <a href="index.html">Home</a>
-        <a href="#">Pygame Tutoring</a>
-        <a href="#">About Me</a>
+        <a href="pygame_tutoring.html">Pygame Tutoring</a>
+        <a href="about_me.html">About Me</a>
         <a href="https://github.com/HarrisonBaghurst">My Github</a>
     </div>
 
