changed displayed email

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
         <p class="description-text">I offer personalised Python programming tutoring for all skill levels, from beginners to advanced learners. 
             Whether you're just starting out or looking to deepen your understanding of complex programming concepts, 
             I will guide you through the learning process with tailored lessons that meet your individual needs.</p>
-        <p class="description-text"><span class="bold_text">Enquiries - Harrison070806@gmail.com</span></p>
+        <p class="description-text"><span class="bold_text">Enquiries - harrison@pythontutoring.co.uk</span></p>
 
         <!-- Image container -->
         <div class="image-container">
