--- a/pygame_tutoring.html
+++ b/pygame_tutoring.html
@@ -273,7 +273,7 @@
             <p>In this tutoring session, we will collaborate on a game project of your choice. I will guide you through using Pygame and help you implement key game components. Additionally, we will address and troubleshoot more complex bugs, as debugging is an essential skill in larger projects.</p>
             <p>Lessons will be conducted via online video call, requiring a stable internet connection, a microphone, and a device (PC or laptop) for programming. A camera is not necessary.</p>
             <p><span class="bold_text">£7.50</span> for the initial hour, followed by <span class="bold_text">£15</span> per hour afterwards.</p>
-            <p><span class="bold_text">Enquiries - Harrison070806@gmail.com</span></p>
+            <p><span class="bold_text">Enquiries - harrison@pythontutoring.co.uk</span></p>
 
         </div>
         <div class="content-box">
