--- a/python_tutoring.html
+++ b/python_tutoring.html
@@ -272,7 +272,7 @@
             <p>In short, anybody can learn Python. In this level of tutoring, I will tailor the lessons to your current level of knowledge, whether you're a beginner or have some experience with programming. I will introduce new concepts and techniques, starting with a theoretical explanation, followed by practical code examples, and provide you with challenges to work through. I will offer guidance and support as needed to ensure your understanding.</p>
             <p>Lessons will be conducted via online video call, requiring a stable internet connection, a microphone, and a device (PC or laptop) for programming. A camera is not necessary.</p>
             <p><span class="bold_text">£7.50</span> for the initial hour, followed by <span class="bold_text">£15</span> per hour afterwards.</p>
-            <p><span class="bold_text">Enquiries - Harrison070806@gmail.com</span></p>
+            <p><span class="bold_text">Enquiries - harrison@pythontutoring.co.uk</span></p>
 
         </div>
         <div class="content-box">
